# FloPro

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  (+1 more)
docs/: mkdocs.yml
python/flo-pro-adk/: README.md  pyproject.toml
python/flo-pro-adk/docs/api/: README.md
python/flo-pro-adk/src/flo_pro_adk/core/assembly/: problem_assembler.py
python/flo-pro-adk/src/flo_pro_adk/core/assertions/: agent_assertions.py  coordination_assertions.py
python/flo-pro-adk/src/flo_pro_adk/core/counterparty/: counterparty_agent.py
python/flo-pro-adk/src/flo_pro_adk/core/data/: data_loader.py  in_memory_data_loader.py  pandas_data_loader.py
python/flo-pro-adk/src/flo_pro_adk/core/exceptions/: agent_errors.py  assembly_errors.py  assertion_errors.py  solver_errors.py  vadk_error.py
python/flo-pro-adk/src/flo_pro_adk/core/solver/: solver_strategy.py  xpress_solver_strategy.py
python/flo-pro-adk/src/flo_pro_adk/core/testing/: e2e_test_runner.py  simulation_data_generator.py  unit_test_runner.py
python/flo-pro-adk/src/flo_pro_adk/flopro/: registration.py
python/flo-pro-adk/tests/: conftest.py
python/flo-pro-adk/tests/core/assertions/: test_admm_assertions.py
python/flo-pro-adk/tests/core/counterparty/: test_counterparty_agent.py
python/flo-pro-adk/tests/core/data/: test_in_memory_data_loader.py  test_pandas_data_loader.py
python/flo-pro-adk/tests/core/exceptions/: test_exception_hierarchy.py
python/flo-pro-adk/tests/core/solver/: test_xpress_solver.py
python/flo-pro-adk/tests/core/testing/: test_e2e_test_runner.py  test_unit_test_runner.py
python/flo-pro-adk/tests/core/types/: test_scenario_params.py
python/flo-pro-adk/tests/flopro/: test_registration.py
python/flo-pro-adk/tests/flopro/testing/: conftest.py  test_retailer_agent.py  test_simulation_suite.py  test_vendor_agent.py
python/flo-pro-sdk/: README.md  pyproject.toml
python/flo-pro-sdk/src/flo_pro_sdk/agent/: agent_definition.py  agent_runtime.py
python/flo-pro-sdk/src/flo_pro_sdk/coordinator/: admm_coordinator.py  coordinator_definition.py  coordinator_runtime.py  problem_format.py  sharing_coordinator.py
python/flo-pro-sdk/src/flo_pro_sdk/core/: compute.py  coordination_run.py  engine.py  handlers.py  in_memory_state_store.py  lifecycle.py  observability.py  persistence.py  persistence_backend.py  problem.py  query.py  registry.py  state.py  state_store.py  structure_function.py  types.py  var_layout.py  variables.py
python/flo-pro-sdk/src/flo_pro_sdk/dashboard/: __init__.py  cli.py  data_provider.py  manager.py  metrics.py  run_browser.py
python/flo-pro-sdk/src/flo_pro_sdk/engine/: __init__.py
python/flo-pro-sdk/src/flo_pro_sdk/testing/: __init__.py  fixtures.py
python/flo-pro-sdk/tests/: check_remote_cluster.py  test_admm_coordinator.py  test_agent_coordinator_params.py  test_dashboard_data_provider.py  test_dashboard_metrics.py  test_in_memory_state_store.py  test_local_engine.py  test_observability.py  test_pbt_registry.py  test_pbt_state_store.py  test_pbt_unique_run_directories.py  test_persistence.py  test_persistence_backend.py  test_ray_engine.py  test_sharing_coordinator.py  test_state.py  test_structure_function.py  test_var_layout.py
(+40 files in other folders)
