[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flopro"
version = "0.1.0"
description = "FloPro - Monorepo root"
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.hatch.envs.default]
dependencies = [
    "flopro-sdk @ {root:uri}/packages/flopro-sdk",
    "flopro-adk @ {root:uri}/packages/flopro-adk",
]
