[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flo-pro-adk"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flo-pro-sdk",
  "numpy",
  "pandas",
]

[project.optional-dependencies]
xpress = ["xpress"]

[tool.hatch.version]
path = "../../VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/flo_pro_adk"]

[tool.pytest.ini_options]
addopts = ["--durations=5", "--color=yes", "--import-mode=importlib"]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["flo_pro_adk"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
extend-exclude = ["build", ".hatch"]

[tool.ruff.lint]
isort.known-first-party = ["flo_pro_adk"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[[tool.mypy.overrides]]
module = ["xpress"]
ignore_missing_imports = true
