[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flo-pro-sdk"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
]

[project.optional-dependencies]
ray = [
  "ray[client]",
]
dashboard = [
  "dash",
  "dash-bootstrap-components",
  "plotly",
]

[project.scripts]
flo-dashboard = "flo_pro_sdk.dashboard.cli:main"

[tool.hatch.version]
path = "../../VERSION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/flo_pro_sdk"]

[tool.pytest.ini_options]
addopts = ["--durations=5", "--color=yes"]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["flo_pro_sdk"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
extend-exclude = ["build", ".hatch"]

[tool.ruff.lint]
isort.known-first-party = ["flo_pro_sdk"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252", "E402", "F841"]

[[tool.mypy.overrides]]
module = [
  "dash.*",
  "dash_bootstrap_components.*",
  "plotly.*",
  "ray.*",
]
ignore_missing_imports = true
follow_imports = "skip"
